--- a/style.css
+++ b/style.css
@@ -30,10 +30,12 @@ body{
     top: 0;
     left: 0;
     right: 0;
-    max-width: 100%;
+    max-width: cover;
     max-height: 100%;
     margin: auto;
     overflow: auto;
+    /* background: url("Images/main_2_stars.svg");
+    background-size: cover; */
 }
 
 #title{
