--- a/style.css
+++ b/style.css
@@ -1,8 +1,5 @@
 body{
-    /* located in the file */
     /* https://css-tricks.com/using-svg/ */
-    background: url("Images/main_1_cover.svg") no-repeat center center fixed;
-    background-size: cover;
     /* This shows white spaces on both sides or at the top and the bottom for  */
     /* background-size: 100% 100%; */
     font-style: normal;
@@ -13,6 +10,7 @@ body{
     /* https://fonts.google.com/?subset=korean */
     /* font-family: 'Sunflower', sans-serif; */
     font-family: 'Poor Story', sans-serif;
+    /* background-size: contain; */
 }
 
 #paragraph{
@@ -26,16 +24,14 @@ body{
 
 #fallingStars{
     opacity: 0;
-    position: fixed;
+    position: relative;
     top: 0;
     left: 0;
     right: 0;
-    max-width: cover;
-    max-height: 100%;
+    /* Enlarge starts according to the screen size */
+    width: 100%;
     margin: auto;
     overflow: auto;
-    /* background: url("Images/main_2_stars.svg");
-    background-size: cover; */
 }
 
 #title{
@@ -45,7 +41,6 @@ body{
     top: 30%; 
     width: 100%;
     opacity: 0;
-
 }
 
 #slogan{
@@ -56,7 +51,6 @@ body{
     width: 100%;
     font-style: italic;
     opacity: 0;
-
 }
 
 #test{
@@ -123,13 +117,17 @@ body{
 }
 
 /* 1) smartphones including iPhone 5 (320 x 568) */
-@media screen and (min-width : 0px) {
+@media screen and (min-width : 0px) and (min-height: 0px) {
+    body{
+        background: url("Images/main_1_cover.svg") center center fixed;
+        background-size: cover;
+    }
     /* loading animation */
     #title{
-        font-size: 20px;
+        font-size: 25px;
     }
     #slogan{
-        font-size: 14px;
+        font-size: 16px;
     }
     .options{
         width: 60px;
@@ -217,13 +215,13 @@ body{
 }
 
 /* 2) Galaxy S5 (360 x 640) */
-@media screen and (min-width : 360px) {
+@media screen and (min-width : 360px) and (min-height: 640px) {
     /* loading animation */
     #title{
-        font-size: 25px;
+        font-size: 28px;
     }
     #slogan{
-        font-size: 20px;
+        font-size: 19px;
     }
     .options {
         width: 70px;
@@ -277,13 +275,13 @@ body{
 }
 
 /* 3) iPhones 6/7/8 (375 x 667) */
-@media screen and (min-width : 375px) {
+@media screen and (min-width : 375px) and (min-height: 667px) {
     /* loading animation */
     #title{
-        font-size: 20px;
+        font-size: 31px;
     }
     #slogan{
-        font-size: 14px;
+        font-size: 22px;
     }
     .options {
         width: 75px;
@@ -337,6 +335,13 @@ body{
 
 /* 4) iPhone X (375 x 812) */
 @media screen and (min-width : 375px) and (min-height : 812px) {
+    /* loading animation */
+    #title{
+        font-size: 33px;
+    }
+    #slogan{
+        font-size: 24px;
+    }
     /* SweetAlert2 popup message START */
     .swal2-thx-msg{
         width: 250px !important;
@@ -389,10 +394,10 @@ body{
 @media screen and (min-width : 414px) {
     /* loading animation */
     #title{
-        font-size: 22px;
+        font-size: 36px;
     }
     #slogan{
-        font-size: 16px;
+        font-size: 25px;
     }
     .options {
         width: 80px;
@@ -451,13 +456,13 @@ body{
 }
 
 /* 6) iPad (768 x 1024) */
-@media screen and (min-width : 768px) {
+@media only screen and (min-width : 768px) and (min-height: 1024px) {
     /* loading animation */    
     #title{
-        font-size: 35px;
+        font-size: 60px;
     }
     #slogan{
-        font-size: 24px;
+        font-size: 40px;
     }
     .options {
         width: 120px;
@@ -524,13 +529,13 @@ body{
 }
 
 /* 7) iPad Pro (1024 x 1366) */
-@media screen and (min-width : 1024px) {
+@media only screen and (min-width : 1024px) and (min-height: 1366px) {
     /* loading animation */
     #title{
-        font-size: 43px;
+        font-size: 80px;
     }
     #slogan{
-        font-size: 35px;
+        font-size: 50px;
     }
     .options {
         width: 170px;
@@ -598,4 +603,33 @@ body{
         transform: scale(1.8);
     }     
     /* SweetAlert2 popup message END */    
+}
+
+/* 8) Desktop */
+@media screen and (min-width : 630px) {
+    body {
+        /* vh: hundredths of the viewport height. */
+        height:100vh;
+        /* multiple background  */
+        background:
+            /*the main background*/
+            url(Images/main_1_cover.svg) center,
+            url(Images/main_1_cover.svg) 40% 50%,
+            /*repeat the left part*/
+            url(Images/main_1_cover.svg) 30% 50%,
+            url(Images/main_1_cover.svg) 20% 50%,
+            url(Images/main_1_cover.svg) 10% 50%,
+            url(Images/main_1_cover.svg) 0% 50%,
+            /*repeat the right part*/
+            url(Images/main_1_cover.svg) 60% 50%,
+            url(Images/main_1_cover.svg) 70% 50%,
+            url(Images/main_1_cover.svg) 80% 50%,
+            url(Images/main_1_cover.svg) 90% 50%,
+            url(Images/main_1_cover.svg) 100% 50%;
+        background-repeat:no-repeat;
+        background-size:contain;         
+    }
+    #fallingStars{
+        object-position: top 50%;
+    }
 }
