after creating a pull request to the group project folder

--- a/style.css
+++ b/style.css
@@ -62,10 +62,8 @@ body{
     display: flex;
     left: 50%;
     top: 50%; 
-    /* https://css-tricks.com/quick-css-trick-how-to-center-an-object-exactly-in-the-center/ */
     /* The translate() CSS function repositions an element in the horizontal and/or vertical directions. */
     transform: translate(-50%, -50%);
-    /* content: url("Images/ovalOrange.svg"); */
 }  
 
 .options {
@@ -120,7 +118,7 @@ body{
     border-color: #F3C78D;
 }
 
-/* make a circle shape */
+/* Making a circle */
 #option1{
     transform: translate(-100%, -150%);
 }
@@ -147,7 +145,7 @@ body{
         font-size: 12px;
     }
     body{
-        background: url("Images/main_1_cover.svg") center center fixed;
+        background: url("../image/main_1_cover.svg") center center fixed;
         background-size: cover;
     }
     /* loading animation */
@@ -659,19 +657,19 @@ body{
         /* multiple background  */
         background:
             /*the main background*/
-            url(Images/main_1_cover.svg) center,
-            url(Images/main_1_cover.svg) 40% 50%,
+            url(../image/main_1_cover.svg) center,
+            url(../image/main_1_cover.svg) 40% 50%,
             /*repeat the left part*/
-            url(Images/main_1_cover.svg) 30% 50%,
-            url(Images/main_1_cover.svg) 20% 50%,
-            url(Images/main_1_cover.svg) 10% 50%,
-            url(Images/main_1_cover.svg) 0% 50%,
+            url(../image/main_1_cover.svg) 30% 50%,
+            url(../image/main_1_cover.svg) 20% 50%,
+            url(../image/main_1_cover.svg) 10% 50%,
+            url(../image/main_1_cover.svg) 0% 50%,
             /*repeat the right part*/
-            url(Images/main_1_cover.svg) 60% 50%,
-            url(Images/main_1_cover.svg) 70% 50%,
-            url(Images/main_1_cover.svg) 80% 50%,
-            url(Images/main_1_cover.svg) 90% 50%,
-            url(Images/main_1_cover.svg) 100% 50%;
+            url(../image/main_1_cover.svg) 60% 50%,
+            url(../image/main_1_cover.svg) 70% 50%,
+            url(../image/main_1_cover.svg) 80% 50%,
+            url(../image/main_1_cover.svg) 90% 50%,
+            url(../image/main_1_cover.svg) 100% 50%;
         background-repeat:no-repeat;
         background-size:contain;         
     }
